# xmm-superres-denoise

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt  run_config.yaml  setup.py  sweep.yaml  train.py
datasets/: tng_datamodule.py  xmm_dispay_datamodule.py  xmm_sim_dataset.py
models/: XMM-DeNoise_data_config.yaml  XMM-DeNoise_real_data_config.yaml  XMM-DeNoise_sim_data_config.yaml  XMM-SuperRes_data_config.yaml  XMM-SuperRes_real_data_config.yaml  XMM-SuperRes_sim_data_config.yaml  esrgan_model.py  esrgen_model.py
notebooks/: inference_example.ipynb  normalizing.ipynb  sr_autoencoder.ipynb  sr_esrgan.ipynb
other/: apply_detmask.ipynb  check_dataset_correctness.py  pn_expo_500_2000_detxy.ds  pn_mask_500_2000_detxy_4x.ds
res/: baseline_config.toml  baseline_config.yaml  run_config_template.yaml
src/: README_inference.md  dev.py  inference.py  inference_end2end_obsid.py  inference_old.py  make_detxy_pn_image_pps.py  produce_detxy_image_for_inference.py  requirements.txt  requirements_nover.txt  run_config.yaml  run_inference_on_real.py  test.py  test_xmmsas_tools.py  train.py
test/: create_combined_loss_string.py  data_scaling_test.py  test_data_config.yaml  test_metrics.py
tests/: 0884120101_pn_cleaned_20.0ks_detxy_500_2000.0_80.fits
transforms/: imageupsample.py  randomflip.py
utils/: imagelogger.py  loss_functions.py  metriclogger.py  onnxexporter.py  ssim.py
xmm_superres_denoise/: README_inference.md  create_shifted_grid_source_fits_files.py  inference_end2end_obsid.py  make_split_files.py  (+5 more)
(+318 files in other folders)
